--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  pedantic: ^1.8.0
-  shimmer: ^1.1.2
+  cupertino_icons: ^1.0.4
+  pedantic: ^1.11.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
